@@ -2,7 +2,8 @@ package university.innopolis.controller;
 
 import jakarta.validation.Valid;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -41,12 +42,27 @@ public class ParticipantController {
     public List<EventResponse> getEvents(@PathVariable Long participantId) {
         var events = service.getParticipantEvents(participantId);
         return events.stream()
-            .map(EventResponse::fromEntity)
-            .collect(Collectors.toList());
+                .map(EventResponse::fromEntity)
+                .toList();
     }
 
     @DeleteMapping("/{participantId}/unregister/{eventId}")
     public void unregister(@PathVariable Long participantId, @PathVariable Long eventId) {
         service.deleteRegistration(participantId, eventId);
+    }
+
+    @PostMapping("/send-code")
+    public ResponseEntity<Void> sendVerificationCode(@RequestBody Map<String, String> payload) {
+        String email = payload.get("email");
+        service.sendVerificationCode(email);
+        return ResponseEntity.ok().build();
+    }
+
+    @PostMapping("/verify-code")
+    public ResponseEntity<Map<String, Boolean>> verifyCode(@RequestBody Map<String, String> payload) {
+        String email = payload.get("email");
+        String code = payload.get("code");
+        boolean success = service.verifyCode(email, code);
+        return ResponseEntity.ok(Map.of("success", success));
     }
 }
