@@ -1,23 +1,21 @@
 package university.innopolis.service;
 
-import java.util.List;
-import java.util.stream.Collectors;
-import org.springframework.stereotype.Service;
+import lombok.RequiredArgsConstructor;
 import university.innopolis.entity.Event;
 import university.innopolis.entity.Participant;
 import university.innopolis.entity.ParticipantEvent;
 import university.innopolis.repository.EventRepository;
+import org.springframework.stereotype.Service;
 import university.innopolis.repository.ParticipantEventRepository;
 
+import java.util.List;
+import java.util.stream.Collectors;
+
 @Service
+@RequiredArgsConstructor
 public class EventService {
     private final EventRepository eventRepository;
     private final ParticipantEventRepository participantEventRepository;
-
-    public EventService(EventRepository repo, ParticipantEventRepository participantEventRepository) {
-        this.eventRepository = repo;
-        this.participantEventRepository = participantEventRepository;
-    }
 
     public Event createEvent(Event event) {
         return eventRepository.save(event);
@@ -31,10 +29,14 @@ public class EventService {
         eventRepository.deleteById(id);
     }
 
+    public Event getEvent(Long id) {
+        return eventRepository.getReferenceById(id);
+    }
+
     public List<Participant> getParticipants(Long eventId) {
         List<ParticipantEvent> participantEvents = participantEventRepository.findByEventId(eventId);
         return participantEvents.stream()
-            .map(ParticipantEvent::getParticipant)
-            .collect(Collectors.toList());
+                .map(ParticipantEvent::getParticipant)
+                .toList();
     }
 }
